<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- General -->
    <string name="title_activity_main">NasaView</string>
    <string name="app_name">NasaView</string>
    <string name="apod_transition_name">apod</string>

    <!-- Favorites fragment -->
    <string name="no_favorites">No favorites saved yett</string>

    <!-- APOD fragment -->
    <string name="error">Something went wrong fetching today\'s APOD.</string>
    <string name="copyright">© </string>


    <!-- Settings fragment -->
    <string name="search_fragment">Search Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="hd_when_possible">Get the HD version of an APOD when possible</string>
    <string name="Attributions">Attributions</string>
    <string name="apod_attribution"><![CDATA[The Astronomy Picture of the Day (APOD) is provided by NASA. More information about this excellent service may be found at: <a href="https://api.nasa.gov/api.html#apod"title="NASA APIs">api.nasa.gov</a>]]></string>
    <string name="design_attribution"><![CDATA[Icons made by <a href="https://www.freepik.com/?__hstc=57440181.06e6a15742487407d793465268dd525c.1556444554003.1556444554003.1556444554003.1&__hssc=57440181.3.1556444554003&__hsfp=3793565771" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"title="Flaticon">www.flaticon.com</a>. It is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>]]></string>
    <string name="about_button_label">about the app</string>

    <!-- About activity-->
    <string name="about_text">This is an activity. It exists solely to satisfy the Udacity capstone requirement for activity transitions. It will be removed after grading and the app is updated to use the new Navigation Component, which strongly encourages a single activity architecture.</string>

    <!-- Bottom navigation -->
    <string name="title_favorites">Favorites</string>
    <string name="title_apod">APOD</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>


    <!-- Content descriptors -->
    <string name="play">play button</string>
    <string name="add_to_favorites" tools:ignore="ExtraTranslation">Add to favorites</string>
    <string name="apod_image">Astronomy picture of the day</string>

    <!-- AdMob -->
    <string name="test_ad_unit_id" tools:ignore="ExtraTranslation">ca-app-pub-3940256099942544/6300978111</string>
    <string name="meta_data_value">ca-app-pub-3940256099942544~3347511713</string>


    <!-- Widget -->
    <string name="todays_apod">Today\'s APOD</string>
    <string name="apod_data_not_yet_available">APOD data not yet available</string>

    <!-- Testing -->
    <string name="sample_title">NGC 2359: Thor\'s Helmet But now the title is quite a bit longer for testing the widget</string>
    <string name="sample_date">2019–02–16</string>
    <string name="sample_desc">NGC 2359 is a helmet-shaped cosmic cloud with wing-like appendages popularly called Thor\'s Helmet. Heroically sized even for a Norse god, Thor\'s Helmet is about 30 light-years across. In fact, the helmet is more like an interstellar bubble, blown as a fast wind from the bright, massive star near the bubble\'s center inflates a region within the surrounding molecular cloud. Known as a Wolf-Rayet star, the central star is an extremely hot giant thought to be in a brief, pre-supernova stage of evolution. NGC 2359 is located about 15,000 light-years away in the constellation Canis Major. The remarkably detailed image is a mixed cocktail of data from broadband and narrowband filters that captures natural looking stars and the glow of the nebula\'s filamentary structures. It highlights a blue-green color from strong emission due to oxygen atoms in the glowing gas.</string>
    <string name="sample_copyright">Ignacio\nDiaz Bobillo</string>
    <string name="sample_desc_short">NGC 2359 is a helmet-shaped cosmic cloud with wing-like appendages popularly called Thor\'s Helmet. Heroically sized even for a Norse god, Thor\'s Helmet is about 30 light-years across. In fact, the helmet is more like an interstellar bubble, blown as a fast wind from the bright, massive star near the bubble\'s center inflates a region within the surrounding molecular cloud.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_about">About</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
