<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FavoriteDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="?attr/homeAsUpIndicator"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fitsSystemWindows="false">

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                />
        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:nextFocusRight="@+id/favorite_fab"
            android:nextFocusDown="@+id/favorite_fab"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_behavior="com.amiculous.nasaview.ui.apod.FABbehavior"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:visibility="invisible" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:transitionName="@string/apod_transition_name"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        tools:src="@drawable/ic_star_white_24dp"
                        android:contentDescription="@string/apod_image" />

                    <ImageView
                        android:id="@+id/play_button"
                        android:layout_width="@dimen/play_button_size"
                        android:layout_height="@dimen/play_button_size"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/round_play_arrow_white_48"
                        android:visibility="invisible"
                        app:layout_collapseMode="parallax"
                        android:contentDescription="@string/play" />
                </FrameLayout>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    tools:title="@string/sample_title" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="com.amiculous.nasaview.ui.apod.FABbehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/leftGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/main_activity_margin" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/rightGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/main_activity_margin" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    tools:text="@string/sample_title"
                    android:textStyle="bold"
                    android:focusable="true"
                    android:nextFocusUp="@+id/favorite_fab"
                    android:nextFocusDown="@+id/date_text"
                    app:layout_constraintStart_toEndOf="@+id/leftGuideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/line_space"
                    tools:text="@string/sample_date"
                    android:focusable="true"
                    android:nextFocusUp="@+id/title_text"
                    android:nextFocusDown="@+id/desc_text"
                    app:layout_constraintStart_toEndOf="@+id/leftGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/title_text" />

                <TextView
                    android:id="@+id/desc_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/line_space"
                    android:paddingBottom="@dimen/main_activity_margin"
                    android:focusable="true"
                    android:nextFocusUp="@+id/date_text"
                    android:nextFocusDown="@+id/copyright_layout"
                    tools:text="@string/sample_desc"
                    app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
                    app:layout_constraintStart_toEndOf="@+id/leftGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/date_text" />

                <LinearLayout
                    android:id="@+id/copyright_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/line_space"
                    android:orientation="horizontal"
                    android:focusable="true"
                    app:layout_constraintStart_toEndOf="@+id/leftGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/desc_text">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/copyright" />

                    <TextView
                        android:id="@+id/copyright_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        tools:text="@string/sample_copyright"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_star_border_white_24dp"
            android:contentDescription="@string/add_to_favorites"
            app:backgroundTint="@color/colorAccent"
            app:layout_anchor="@id/collapsing_toolbar"
            app:layout_anchorGravity="bottom|end"
            android:focusable="true"
            android:nextFocusUp="@+id/app_bar_layout"
            android:nextFocusDown="@+id/title_text"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>