<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.amiculous.nasaview.ui.apod.SingleApodViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".ui.apod.ApodFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            bind:visibleIf="@{viewmodel.showError}">
            <TextView
                android:text="@string/error"
                android:gravity="center"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            bind:visibleIf="@{!viewmodel.showError}"
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:nextFocusRight="@+id/favorite_fab"
            android:nextFocusDown="@+id/favorite_fab">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_behavior="com.amiculous.nasaview.ui.apod.FABbehavior"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    bind:visibleIf="@{viewmodel.showProgressSpinner}"
                    tools:visibility="invisible" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/apod_image"
                        android:scaleType="centerCrop"
                        bind:displayApod= "@{viewmodel.apodEntity}"
                        bind:visibleIf="@{viewmodel.showApod}"
                        app:layout_collapseMode="parallax"
                        tools:src="@drawable/ic_star_white_24dp" />

                    <ImageView
                        android:id="@+id/play_button"
                        android:layout_width="@dimen/play_button_size"
                        android:layout_height="@dimen/play_button_size"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/play"
                        android:scaleType="centerCrop"
                        android:src="@drawable/round_play_arrow_white_48"
                        bind:visibleIf="@{viewmodel.showPlayButton}"
                        app:layout_collapseMode="parallax" />
                </FrameLayout>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    tools:title="@string/sample_title" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            bind:visibleIf="@{!viewmodel.showError}"
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="com.amiculous.nasaview.ui.apod.FABbehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/leftGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/main_activity_margin" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/rightGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/main_activity_margin" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:focusable="true"
                    android:nextFocusUp="@+id/favorite_fab"
                    android:nextFocusDown="@+id/date_text"
                    android:textStyle="bold"
                    android:text= "@{viewmodel.title}"
                    app:layout_constraintStart_toEndOf="@+id/leftGuideline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/sample_title" />

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/line_space"
                    android:focusable="true"
                    android:nextFocusUp="@+id/title_text"
                    android:nextFocusDown="@+id/desc_text"
                    android:text= "@{viewmodel.date}"
                    app:layout_constraintStart_toEndOf="@+id/leftGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/title_text"
                    tools:text="@string/sample_date" />

                <TextView
                    android:id="@+id/desc_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/line_space"
                    android:focusable="true"
                    android:nextFocusUp="@+id/date_text"
                    android:nextFocusDown="@+id/copyright_layout"
                    android:text= "@{viewmodel.explanation}"
                    android:paddingBottom="@dimen/main_activity_margin"
                    app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
                    app:layout_constraintStart_toEndOf="@+id/leftGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/date_text"
                    tools:text="@string/sample_desc" />

                <LinearLayout
                    android:id="@+id/copyright_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/line_space"
                    android:focusable="true"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/leftGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/desc_text">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/copyright" />

                    <TextView
                        android:id="@+id/copyright_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:visibility="visible"
                        android:text= "@{viewmodel.copyright}"
                        tools:text="@string/sample_copyright" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            bind:visibleIf="@{!viewmodel.showError}"
            android:id="@+id/favorite_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/add_to_favorites"
            android:focusable="true"
            android:nextFocusUp="@+id/app_bar_layout"
            android:nextFocusDown="@+id/title_text"
            android:src="@drawable/ic_star_border_white_24dp"
            app:backgroundTint="@color/colorAccent"
            app:layout_anchor="@id/collapsing_toolbar"
            app:layout_anchorGravity="bottom|end"
            bind:setFavoriteButtonState="@{viewmodel.isFavorite}"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

