<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/hd_when_possible_text"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hd_when_possible"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title" />

    <Switch
        android:id="@+id/hd_switch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/hd_when_possible_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hd_when_possible_text"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/settings_divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/hd_when_possible_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/attributions_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Attributions"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/settings_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/apod_attribution_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="The Astronomy Picture of the Day (APOD) is provided by NASA. More information about this excellent service may be found at: link"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/attributions_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/attributions_divider_1"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/apod_attribution_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/design_attribution_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Icons made by Freepik from FlatIcon. Flaticon is licensed by Creative Commons BY 3.0."
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/attributions_divider_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/attributions_divider_2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/design_attribution_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginTop="40dp"
        android:text="@string/about_button_label"
        app:layout_constraintTop_toBottomOf="@id/attributions_divider_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>




    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/test_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>