<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/default_apod"
            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toTopOf="@id/topGuideline" />

        <android.support.constraint.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/main_activity_margin" />

        <android.support.constraint.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="400dp" />

        <android.support.constraint.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/main_activity_margin" />

        <android.support.constraint.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/main_activity_margin" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/bottomGuideline"
            android:text="@string/sample_title" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            android:text="@string/sample_date" />

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingBottom="@dimen/main_activity_margin"
            android:text="@string/sample_desc"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toEndOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/date_text" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>